--- a/spotifyclone.css
+++ b/spotifyclone.css
@@ -10,6 +10,7 @@
 .main{
     display:flex;
     height:100vh;
+    padding: 0.5rem;
 }
 
 .sidebar{
@@ -68,4 +69,71 @@ a{
 .nav-option a{
     font-size:1rem;
     margin-left: 1rem;
+}
+
+.library{
+    background-color: grey;
+    border-radius: 1rem;
+    height:100%;
+    margin-top: 0.5rem;
+    padding: 0.5rem 0.75rem;
+
+}
+
+.options{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.lib-option img{
+    height:1.25rem;
+    width:1.25rem;
+}
+
+.icons{
+    font-size: 1.25rem;
+    
+    display: flex;
+}
+
+.icons i{ 
+    opacity: 0.7;
+    margin-right:1rem;
+}
+.icons i:hover{ 
+    opacity: 1;
+    margin-right:1rem;
+}
+
+
+.box{
+    height:8rem;
+    background-color: 232323;
+    border-radius: 0.75rem;
+    margin: 0.5rem 0 0.5rem 0;
+    padding:1rem 1.25rem;
+}
+
+.box-p1{
+    font-size: 1rem;
+    font-weight: 500;
+
+}
+
+.box-p2{
+    font-size: 0.75rem;
+    opacity: 0.9rem;
+}
+
+.badge{
+    background-color: #fff;
+    border: none;
+    border-radius: 100px;
+    padding:0.25rem 1rem;
+    font-weight: 700;
+    color: #121212;
+    margin-top: 0.5rem;
+    height:2rem;
+    width:fit-content;
 }
