--- a/spotifyclone.css
+++ b/spotifyclone.css
@@ -14,9 +14,10 @@
 }
 
 .sidebar{
-    background-color:green;
+    background-color:#000;
     width:340px;
     border-radius: 1rem;
+    margin-right: 0.5rem;
 }
 
 
@@ -25,6 +26,7 @@
    flex:1;
    border-radius: 1rem;
    overflow:auto; 
+   padding:0 1.5rem 0 1.5rem;
 }
 
 .music-player{
@@ -111,8 +113,8 @@ a{
     height:8rem;
     background-color: 232323;
     border-radius: 0.75rem;
-    margin: 0.5rem 0 0.5rem 0;
-    padding:1rem 1.25rem;
+    margin: 0.75rem 0 1.75rem 0;
+    padding: 0.5rem 1.25rem;
 }
 
 .box-p1{
@@ -136,4 +138,165 @@ a{
     margin-top: 0.5rem;
     height:2rem;
     width:fit-content;
+}
+
+.dark badge{
+    background-color: #000;
+    color:white;
+
+}
+
+
+
+
+.sticky-nav{
+    position:sticky;
+    top:0;
+    background-color: grey;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    padding:1rem 0 1rem 0;
+    z-index:10;
+}
+
+.sticky-nav-icons{
+    margin-left:0.75rem;
+}
+
+.sticky-nav-options{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    
+
+}
+
+.sticky-nav-options button{
+    margin-right: 0.5rem;
+}
+
+
+
+@media(max-width:1000px){
+
+}
+
+
+.card{
+    background-color: lightgrey;
+    width:150px;
+    border-radius: 0.5rem;
+    margin:1.5rem;
+    margin-top:1rem;
+    
+}
+
+.cards-container{
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+.card-img{
+    width:100%;
+    border-radius: 0.5rem;
+
+}
+
+.card-title{
+    font-weight:600;
+}
+
+.card-info{
+    font-size: 0.85rem;
+    opacity:0.8;
+}
+
+
+
+.footer{
+    height:200px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.line{
+    width:90%;
+    height:50%; 
+    border-top:1px solid white;
+    opacity:0.4;
+
+}
+
+.music-player{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.album{
+    width:25%;
+    background-color: pink;
+}
+.player{
+    width:50%;
+    background-color: black;
+    
+}
+
+.control{
+    width:25%;
+    background-color: green;
+}
+
+.player-controls{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+.player-control-icon{
+    height:1rem;
+    margin-right:1.75rem;
+    opacity: 0.7;
+
+}
+.player-control-icon:hover{
+    
+    opacity: 1;
+
+}
+
+
+.playback-bar{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.progress-bar{
+    width:70%;
+    appearance: none;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.progress-bar::-webkit-slider-runnable-track{
+    background-color: #ddd;
+    border-radius:100px;
+    height:0.35rem;
+}
+
+.progress-bar::-webkit-slider-thumb{
+    appearance: none;
+    height:1rem;
+    width:1rem;
+    background-color: #1bd760;
+    border-radius: 50%;
+    margin-top:-6px;
 }
